Closed
Bug 1037723
Opened 7 years ago
Closed 7 years ago
Shell-only crash [@ EncodeLatin1] with Symbol
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
Tracking | Status | |
---|---|---|
firefox33 | --- | affected |
People
(Reporter: decoder, Assigned: evilpie)
Details
(Keywords: crash, testcase, Whiteboard: [jsbugmon:update])
Crash Data
Attachments
(2 files, 1 obsolete file)
214 bytes,
text/plain
|
Details | |
897 bytes,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
The following testcase crashes on mozilla-central revision e1a037c085d1 (run with --fuzzing-safe): var sym = Symbol.for("hello"); assertEq(sym in environment, true);
Reporter | ||
Comment 1•7 years ago
|
||
Reporter | ||
Comment 2•7 years ago
|
||
Another symbol thing, needinfo from jorendorff.
Reporter | ||
Comment 3•7 years ago
|
||
Attachment #8454775 -
Attachment is obsolete: true
Assignee | ||
Comment 4•7 years ago
|
||
Updated•7 years ago
|
Attachment #8470871 -
Flags: review?(jdemooij) → review+
Assignee | ||
Comment 5•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a26fd3f83a55
Comment 6•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/a26fd3f83a55
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Updated•7 years ago
|
Flags: qe-verify-
Updated•6 years ago
|
Flags: needinfo?(jorendorff)
You need to log in
before you can comment on or make changes to this bug.
Description
•