Bug 1037723 - Fix how the js shell global environment handles symbols. r=jandem